--- a/index.html
+++ b/index.html
@@ -25,6 +25,59 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col"></div>
+          </div>
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+          </div>
+          <div class="row"><div class="col"></div></div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row"><div class="col"></div></div>
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col"></div>
+          </div>
+          <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+          </div>
+          <div class="row"><div class="col"></div></div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+          </div>
+          <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
