--- a/index.html
+++ b/index.html
@@ -77,7 +77,81 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="footer" class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <h6 class="text-uppercase-expanded text-xs mb-4">SB UI Kit Pro</h6>
+            <p>Design made easy</p>
+            <div class="icon-list-social mb-5">
+              <a class="icon-list-social-link" href=""
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a class="icon-list-social-link" href=""
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a class="icon-list-social-link" href=""
+                ><i class="fab fa-github"></i
+              ></a>
+              <a class="icon-list-social-link" href=""
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-lg-9">
+            <div class="row">
+              <div class="col-lg-3">
+                <h6 class="text-uppercase-expanded text-xs mb-4">Product</h6>
+                <ul class="mb-0 p-0">
+                  <li class="mb-2"><a href="">Landing</a></li>
+                  <li class="mb-2"><a href="">Pages</a></li>
+                  <li class="mb-2"><a href="">Sections</a></li>
+                  <li class="mb-2"><a href="">Documentation</a></li>
+                  <li class="mb-2"><a href="">Changelog</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3">
+                <h6 class="text-uppercase-expanded text-xs mb-4">Technical</h6>
+                <ul class="mb-0 p-0">
+                  <li class="mb-2"><a href="">Documentation</a></li>
+                  <li class="mb-2"><a href="">Changelog</a></li>
+                  <li class="mb-2"><a href="">Theme Customizer</a></li>
+                  <li class="mb-2"><a href="">UI Kit</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3">
+                <h6 class="text-uppercase-expanded text-xs mb-4">Includes</h6>
+                <ul class="mb-0 p-0">
+                  <li class="mb-2"><a href="">Utilities</a></li>
+                  <li class="mb-2"><a href="">Components</a></li>
+                  <li class="mb-2"><a href="">Layouts</a></li>
+                  <li class="mb-2"><a href="">Code Samples</a></li>
+                  <li class="mb-2"><a href="">Products</a></li>
+                  <li class="mb-2"><a href="">Affiliates</a></li>
+                  <li class="mb-2"><a href="">Updates</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3">
+                <h6 class="text-uppercase-expanded text-xs mb-4">Legal</h6>
+                <ul class="mb-0 p-0">
+                  <li class="mb-2"><a href="">Privacy Policy</a></li>
+                  <li class="mb-2"><a href="">Terms and Conditions</a></li>
+                  <li class="mb-2"><a href="">License</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr class="my-5" />
+        <div class="d-md-flex justify-content-between">
+          <div>Copyright © Your Website 2021</div>
+          <div>
+            <a href="">Privacy Policy</a>
+            <a href="">Terms & Conditions</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
