--- a/index.html
+++ b/index.html
@@ -64,12 +64,22 @@
           <div class="row"><div class="col"></div></div>
         </div>
       </section>
-      <section>
+
+      <hr>
+      <section class="margin-section">
         <div class="container">
-          <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+          <div class="row align-items-center">
+            <div class="col-6">
+              <div class="h4 fw-normal">Ready to get started?</div>
+              <p class="lead mb-0 text-gray-500">Get in touch or create an account.</p>
+            </div>
+            <div class="col-lg-6 text-lg-end">
+               <a class="btn btn-primary fw-500 marg mr" href="#">Contact Sales</a>
+               <a href="#" class="btn btn-withe fw-500 shadow marg">Create Account</a>
+
+            </div>
           </div>
+
           <div class="row">
             <div class="col-6"></div>
             <div class="col-6"></div>
