--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ejercicio09-Maquetacion</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,15 +42,89 @@
           <div class="row"><div class="col"></div></div>
         </div>
       </section>
+      <!-- Standar plan price -->
       <section>
         <div class="container">
-          <div class="row"><div class="col"></div></div>
           <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6"></div>
+            <div class="text-center mb-5"">
+            <h2>One plan, no hassle</h2>
+            <p class="lead">Easy pricing means no suprises.</p>
+          </div>
+        </div>
+        <div class="row g-0 align-items-center">
+          <div class="col-6">
+            <div class="card-standard">
+              <div class="card-body p-5">
+                <div class="bg-primarysoft text-primary">Standard</div>
+              </div>
+              <div class="pricing-price">
+                <sup>$</sup> 19
+                <span class="pricing-price-period">/mo</span>
+              </div>
+              <ul class="fa-ul pricing-list">
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Up to 15 users</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Email and live chat support</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Style customizer</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Custom components</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Expanded utilities</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Third-party integration</span>
+                </li>
+                <li class="pricing-list-item">
+                  <span><i class="far fa-check-circle text-teal"></i></span>
+                  <span class="text-dark">Layout options</span>
+                </li>
+              </ul>
+              <div class="card-footer-standard px-5 d-flex">
+                <a
+                  class="d-flex align-items-center justify-content-between"
+                  href=""
+                >
+                  Get Started! <i class="fas fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="card-customized">
+              <div class="card-body p-5">
+                <div class="badge badge-sm bg-transparent-light">
+                  Customized
+                </div>
+              </div>
+              <p class="card-text py-5">
+                Need a customized plan? Contact us directly and we can work with
+                you to craft a plan that fits your company's specific needs.
+              </p>
+              <div class="card-footer-customized px-5">
+                <a
+                  class="text-white-50 d-flex align-items-center justify-content-between"
+                  href=""
+                >
+                  Contact Sales <i class="fas fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!--  Different pricings plans -->
       <section>
         <div class="container">
           <div class="row">
