Maquetado de Cards y estilos

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
               </ul>
               <div class="card-footer-standard px-5 d-flex">
                 <a
-                  class="d-flex align-items-center justify-content-between"
+                  class=" d-flex align-items-center justify-content-between"
                   href=""
                 >
-                  Get Started! <i class="fas fa-arrow-right"></i
+                  Get Started!<i class="fas fa-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -124,18 +124,147 @@
           </div>
         </div>
       </section>
+      <hr />
       <!--  Different pricings plans -->
       <section>
         <div class="container">
           <div class="row">
-            <div class="col"></div>
+            <div class="col">
+                <div class="text-center mb-5"">
+                    <h2>Simple Pricing</h2>
+                    <p class="lead">Easy pricing means no suprises.</p>
+                  </div>
+            </div>
           </div>
           <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4"></div>
-            <div class="col-4"></div>
+            <div class="col-4">
+              <div class="card-standard">
+                <div class="card-body p-5">
+                  <div class="bg-primarysoft text-primary">Free</div>
+                </div>
+                <div class="pricing-price">
+                  <sup>$</sup> 0
+                  <span class="pricing-price-period">/mo</span>
+                </div>
+                <ul class="fa-ul pricing-list">
+                  <li class="pricing-list-item">
+                    <span><i class=" far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">1 user</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Community support</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Style customizer</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Custom components</span>
+                  </li>
+                  <li id="list-item-pricing"  class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Expanded utilities</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Third-party integration</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Layout options</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-standard">
+                <div class="card-body p-5">
+                  <div class="bg-primarysoft text-primary">Standard</div>
+                </div>
+                <div class="pricing-price">
+                  <sup>$</sup> 19
+                  <span class="pricing-price-period">/mo</span>
+                </div>
+                <ul class="fa-ul pricing-list">
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Up to 15 users</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Email and live chat support</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Style customizer</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Custom components</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Expanded utilities</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Third-party integration</span>
+                  </li>
+                  <li id="list-item-pricing" class="pricing-list-item">
+                    <span><i class="far fa-circle text-gray-200"></i></span>
+                    <span class="text-dark">Layout options</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card-standard">
+                <div class="card-body p-5">
+                  <div class="bg-primarysoft text-primary">Premium</div>
+                </div>
+                <div class="pricing-price">
+                  <sup>$</sup> 29
+                  <span class="pricing-price-period">/mo</span>
+                </div>
+                <ul class="fa-ul pricing-list">
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Up to 15 users</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Email and live chat support</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Style customizer</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Custom components</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Expanded utilities</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Third-party integration</span>
+                  </li>
+                  <li class="pricing-list-item">
+                    <span><i class="far fa-check-circle text-teal"></i></span>
+                    <span class="text-dark">Layout options</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="row"><div class="col"></div></div>
+          <div class="row"><div class="col text-center mt-5">
+              <a class="btn btn-primary fw-500" href="">Get Starded</a>
+          </div></div>
+          <hr />
         </div>
       </section>
       <section>
