--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <!--  Different pricings plans -->
       <section>
         <div class="container">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
                 <div class="text-center mb-5"">
                     <h2>Simple Pricing</h2>
